create food expenses

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 
-#calc-btn{
+#calculation-button{
     background-color: skyblue;
     border: 0;
     border-radius: 5px;
     padding: 5px 35px;
 }
-#save-btn{
+#savings-button{
     background-color: skyblue;
     border: 0;
     border-radius: 5px;
